Add classes for Todo, Note, Project. - created classes for objects and DOM manipulation - created sticky note and function to display it - created mini-form to test event listener and todo creation

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,24 @@
 body {
-    background-color: rebeccapurple;
+    background-color: darkslategrey;
   }
+
+ul,li{
+  list-style:none;
+}
+ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+ul li a{
+  text-decoration:none;
+  color:#000;
+  background:#ffc;
+  display:block;
+  height:10em;
+  width:10em;
+  padding:1em;
+}
+ul li{
+  margin:1em;
+}
