--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,31 @@
 body {
     background-color: darkslategrey;
-  }
+}
 
+* {
+  border: 1px solid black;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: minmax(100px, 200px) 1fr;
+  grid-template-rows: 100px 400px;
+}
+
+.top {
+  grid-area: 1 / 1 / 2 / 3;
+}
+
+.side {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+.main {
+  grid-area: 2 / 2 / 3 / 3;
+}
+
+
+/* sticy note styles */
 ul,li{
   list-style:none;
 }
