--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,74 @@
-body {
-    background-color: darkslategrey;
+:root {
+  position: relative;
 }
 
-* {
-  border: 1px solid black;
+body {
+    margin: none;
+    font-size: 16px;
+    background-color: rgb(151, 49, 49);
+}
+
+.popup {
+  position: absolute;
+  top: -150%;
+  left: 50%;
+  opacity: 0;
+  transform: translate(-50%, -50%) scale(1.25);
+  width: 400px;
+  padding: 20px 30px;
+  background: rgb(255, 187, 92);
+  box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  transition: top 0ms ease-in-out 200ms,
+              opacity 200ms ease-in-out 0ms,
+              transform 20ms ease-in-out 0ms;
+}
+
+.popup.active {
+  top: 50%;
+  opacity: 1;
+  transition: top 0ms ease-in-out 200ms,
+              opacity 200ms ease-in-out 0ms,
+              transform 20ms ease-in-out 0ms;
+}
+
+.popup .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  height: 15px;
+  background: #888;
+  color: #eee;
+  text-align: center;
+  line-height: 15px;
+  border-radius: 15px;
+  cursor: pointer;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: minmax(100px, 200px) 1fr;
-  grid-template-rows: 100px 400px;
+  grid-template-rows: 3em 400px;
 }
 
 .top {
   grid-area: 1 / 1 / 2 / 3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.top button {
+  margin: 1em 4em 0.5em 4em;
+  padding: 10px 20px 10px 20px;
+  font-size: 1.5em;
+  border: none;
+  border-radius: 10px;
+}
+
+.top button:active {
+  transform: scale(0.95);
 }
 
 .side {
@@ -29,12 +84,12 @@ body {
 ul,li{
   list-style:none;
 }
-ul{
+ul.notes{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-ul li a{
+ul.notes li a{
   text-decoration:none;
   color:#000;
   background:#ffc;
@@ -43,24 +98,26 @@ ul li a{
   width:10em;
   padding:1em;
 }
-ul li{
+ul.notes li{
   margin:1em;
 }
 
+
+
 .todo-low {
-  background-color: antiquewhite;
+  background-color: rgb(224, 167, 94);
   border-left: 5px solid green;
   margin: 1em;
 }
 
 .todo-normal {
-  background-color: antiquewhite;
+  background-color: rgb(224, 167, 94);
   border-left: 5px solid yellow;
   margin: 1em;
 }
 
 .todo-high {
-  background-color: antiquewhite;
+  background-color: rgb(224, 167, 94);
   border-left: 5px solid red;
   margin: 1em;
 }
