--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,21 +1,49 @@
 :root {
   position: relative;
 
-  --bg-color: rgb(246, 238, 201);
-  --main-color: rgb(161, 221, 112);
-  --secondary-color: rgb(238, 78, 78);
-  --todo-color: rgb(121, 147, 81);
+  --bg-color: rgb(255, 251, 233);
+  --main-color: rgb(227, 202, 165);
+  --secondary-color: rgb(173, 139, 115);
+  --todo-color: rgb(206, 171, 147);
+  --font-color: rgb(13, 115, 119);
 
   --shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
 
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'rubiklight', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
 @font-face {
   font-family: 'waiting_for_the_sunriseRg';
-  src: url('waitingforthesunrise-regular-webfont.woff2') format('woff2'),
-       url('waitingforthesunrise-regular-webfont.woff') format('woff');
+  src: url('../fonts/waitingforthesunrise-regular-webfont.woff2') format('woff2'),
+       url('../fonts/waitingforthesunrise-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'concert_oneregular';
+  src: url('../fonts/concertone-regular-webfont.woff2') format('woff2'),
+       url('../fonts/concertone-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'rubiklight';
+  src: url('../fonts/rubik-variablefont_wght-webfont.woff2') format('woff2'),
+       url('../fonts/rubik-variablefont_wght-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'scriphyregular';
+  src: url('../fonts/scriphy-webfont.woff2') format('woff2'),
+       url('../fonts/scriphy-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -75,36 +103,90 @@ a {
   cursor: pointer;
 }
 
+#add-todo,
+#add-note {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5em;
+  align-items: center;
+}
+
+#add-todo {
+  grid-template-rows: 1fr 1fr 2fr 4fr 2fr;
+}
+
+#add-note {
+  grid-template-rows: 1fr 4fr 2fr;
+}
+
+
+#add-todo button,
+#add-note button {
+  background-color: var(--bg-color);
+  grid-column: span 2;
+  margin: auto;
+}
+
+#add-todo fieldset {
+  grid-column: span 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+
+textarea {
+  resize: none;
+}
+
+#new-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .strikethrough-text {
   text-decoration: line-through;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: minmax(100px, 200px) 1fr;
-  grid-template-rows: 4em 400px;
+  grid-template-columns: max(300px) 1fr;
+  grid-template-rows: 4em minmax(calc(100vh - 4em), auto);
 }
 
 .top {
   grid-area: 1 / 1 / 2 / 3;
   display: flex;
   align-items: center;
-  background-color: var(--todo-color);
+  background-color: var(--secondary-color);
 }
 
 .top h1 {
-  margin: auto;
+  margin-left: auto;
+  margin-right: 2em;
+  font-size: 3em;
+  font-family: 'concert_oneregular', sans-serif;
+  text-shadow: 0 0 15px rgba(255,255,255,.5), 0 0 10px rgba(255,255,255,.5);
 }
 
 
 .top button {
   padding: 10px 20px 10px 20px;
-  margin-right: 5em;
+  margin-right: auto;
   font-size: 1.5em;
   border: none;
   border-radius: 10px;
-  background-color: var(--bg-color);
-  box-shadow: var(--shadow);
+  background-color: rgb(0, 0, 0, 0);
+}
+
+.top button svg {
+  width: 40px;
+  height: auto;
+}
+
+.top button svg:hover {
+  color: #000;
 }
 
 .top button:active {
@@ -113,8 +195,7 @@ a {
 
 .sidebar {
   grid-area: 2 / 1 / 3 / 2;
-  background-color: var(--todo-color);
-  height: calc(100vh - 4em);
+  background-color: var(--secondary-color);
 }
 
 .main {
@@ -122,7 +203,7 @@ a {
 }
 
 ul {
-  margin-top: 5em;
+  margin-top: 3em;
   font-weight: bold;
   display: grid;
   grid-template-columns: 1fr;
@@ -162,13 +243,51 @@ ul,li{
 
 .basic-info-outer {
   display: flex;
-  gap: 2em;
+  align-items: center;
+  gap: 0.5em
+}
+
+.basic-info-outer .feather-trash-2 {
+  margin-right: 2em;
+}
+
+.basic-info-outer input[type='checkbox'] {
+  margin: 1em;
 }
 
 .basic-info-inner {
   display: flex;
   width: 100%;
   justify-content: space-between;
+}
+
+.basic-info-inner h4 {
+  margin-right: 4em;
+}
+
+.more-info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+}
+
+.more-info textarea,
+.more-info p {
+  margin-left: 1em;
+  grid-row: 1 / 4;
+}
+
+.more-info label,
+.more-info h4 {
+  margin-left: auto;
+  margin-right: calc(6em + 20px);
+}
+
+.apply-button {
+  grid-column: span 2;
+  margin-right: 2em;
+  margin-bottom: 1em;
+  place-self: center end;
 }
 
 .checked {
@@ -228,7 +347,7 @@ span.edit-note:hover {
 }
 
 .note-container h4 {
-  font-family: 'waiting_for_the_sunriseRg', sans-serif;
+  font-family: 'scriphyregular', sans-serif;
   font-size: 1.5em;
   text-align: center;
   margin-top: 0.5em;
@@ -238,7 +357,7 @@ span.edit-note:hover {
 
 .note-container p {
   justify-self: left;
-  font-family: 'waiting_for_the_sunriseRg', sans-serif;
+  font-family: 'scriphyregular', sans-serif;
   font-size: 1.2em;
   line-height: 0.9;
   margin-top: 1em;
@@ -301,11 +420,16 @@ svg {
   cursor: pointer;
 }
 
-.project-item-container svg {
+.sidebar svg {
+  margin-right: 1em;
+}
+
+.project-item-container svg.feather-trash-2 {
   margin-right: 2em;
 }
 
-svg:hover {
+svg.feather-trash-2:hover,
+svg.feather-edit:hover {
   transform: scale(1.15);
   color: red;
 }
